--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
         <div id="content-container">
             <div id="banner">
                 <h2>Our Mission</h2>
-                <p>Handpicked, Artisanlly Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</p>
+                <h4>Handpicked, Artisanlly Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div>
+            <div id="content">
+                <h2>Tea of the Month</h2>
+                <h3>What's Steeping at The Tea Cozy?</h3>
+                <div id="media">
+                    <figure class="image"> 
+                        <img src="/images/img-berryblitz.jpg">
+                        <figcaption><h4>Fall Berry Blitz Tea</h4></figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="/images/img-spiced-rum.jpg">
+                        <figcaption><h4>Spiced Rum Tea</h4></figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="/images/img-donut.jpg">
+                        <figcaption><h4>Seasonal Donuts</h4></figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="images/img-myrtle-ave.jpg">
+                        <figcaption><h4>Mrtyle Ave Tea</h4></figcaption>
+                    </figure>
+                    <figure class="image">
+                        <img src="/images/img-bedford-bizarre.jpg" alt="img-bedford-bizarre">
+                         <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
     </body>
