fixed banner and media

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
                 <li><a href="#">Locations</a></li>
             </ul>
         </div>
-        <div id="content-container">
+        
             <div id="banner">
+                <div id="banner-text">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanlly Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+                </div>
             </div>
             <div id="content">
                 <h2>Tea of the Month</h2>
@@ -44,6 +46,6 @@
                     </figure>
                 </div>
             </div>
-        </div>
+        
     </body>
 </html>
