--- a/index.html
+++ b/index.html
@@ -46,18 +46,34 @@
             </div>
         </div>
         <div id="location-container">
-            <div id="location">
-                <h3>Locations</h3>
-                <div id="downtown" class="info">
-
+            <div id="downtown" class="info">
+                    <h3>Downtown</h3>
+                    <p>384 West 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
                 </div>
                 <div id="east-bayside" class="info">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
 
                 </div>
                 <div id="oakdale" class="info">
-
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
                 </div>
             </div>
+        </div>
+        <div id="contact">
+            <h2>Tea Cozy</h2>
+            <h5>contact@teacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </div>
+        <div id="footer">
+            <h6>copyright The Tea Cozy 2017</h6>
         </div>
     </body>
 </html>
